<resources>
    <string name="app_name">Pet Ber</string>
    <string name="text_email">Email</string>
    <string name="text_password">Password</string>
    <string name="text_login">Login</string>
    <string name="txt_forgot_password">Forgot password?</string>
    <string name="action_navigate_register">Register a new account</string>
    <string name="blank_email">Email cannot be left blank!</string>
    <string name="invalid_email">Invalid email address!</string>
    <string name="pw_empty">The password cannot be empty!</string>
    <string name="invalid_length_password">The password must be at least 6 characters long!</string>
    <string name="text_sign_up">Sign up</string>
    <string name="text_display_name">Display name</string>
    <string name="text_confirm_password">Confirm password</string>
    <string name="text_already_have_account">Already have an account?</string>
    <string name="confirm_pw_empty">Confirm password is empty!</string>
    <string name="invalid_confirm_password">Invalid confirm password!</string>
    <string name="username_empty">Username is empty!</string>
    <string name="register_success">Registered successfully, you need to confirm your email before logging in!</string>
    <string name="login_success">Login successful!</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="create">Create</string>
    <string name="notifications">Notifications</string>
    <string name="profile">Profile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pet">Pet </string>
    <string name="ber">Ber</string>
    <string name="pet_stories">Pet Stories</string>
    <string name="hint_edt_search">Search for users, pets, post…</string>
    <string name="follow">Follow</string>
    <string name="users">Users</string>
    <string name="pets">Pets</string>
    <string name="hashtags">Hashtags</string>
    <string name="user_name">Username</string>
    <string name="petber_user">PetBer User</string>
    <string name="images_videos">Images / Videos</string>
    <string name="sub_title_story">Share your pet\'s 24-hour moments</string>
    <string name="story">Story</string>
    <string name="create_a_new_story">Create a new Story</string>
    <string name="create_content">Create content</string>
    <string name="dep_item_create_post">Post a post with photos or videos of your pet</string>
    <string name="preview_story">Preview Story</string>
    <string name="post_story">Post Story</string>
    <string name="choose_media">Choose media</string>
    <string name="choose_multiple">Choose multiple</string>
    <string name="next">Next</string>
    <string name="all">All</string>
    <string name="image">Image</string>
    <string name="video">Video</string>
    <string name="choose">Choose</string>
    <string name="permission_question">You need to grant permission to select photos/videos.</string>
    <string name="uploading">Uploading…</string>
    <string name="dont_exit_app">Please do not exit the application</string>
    <string name="story_posted">Story posted!</string>
    <string name="post_details">Post details</string>
    <string name="post_content">Post content</string>
    <string name="post">Post</string>
    <string name="create_a_new_post">Create new post</string>
    <string name="hint_caption">Enter caption here…</string>
    <string name="tag_your_pet">Tag your pet</string>
    <string name="hint_hashtags">#hashtags…</string>
    <string name="post_now">Post Now</string>
    <string name="caption_empty">Please enter a caption!</string>
    <string name="error_select_media">Please select at least one photo/video!</string>
    <string name="edit_media">Edit media</string>
    <string name="my_pet_list">My pet list</string>
    <string name="all_posts">All posts</string>
    <string name="message">Message</string>
    <string name="add_pet">Add pet</string>
    <string name="personal_information">Personal information:</string>
    <string name="address">Address</string>
    <string name="phone_number">Phone number</string>
    <string name="gender">Gender</string>
    <string name="hobbies">Hobbies</string>
    <string name="add_bio">Add bio…</string>
    <string name="add_gender">Add gender</string>
    <string name="add_address">Add address</string>
    <string name="add_phone_number">Add phone number</string>
    <string name="add_birthday">Add birthday</string>
    <string name="add_hobbies">Add hobbies</string>
    <string name="username_cannot_contain_spaces">Username cannot contain spaces!</string>
    <string name="username_invalid_characters">Username must only contain lowercase letters, numbers, underscores (_) and periods (.)!</string>
    <string name="username_invalid_characters_length">Username must have at least 2 characters!</string>
    <string name="add_new_story">Add new story</string>
    <string name="edit_profile">Edit profile</string>
    <string name="add_new_pet">Add new Pet</string>
    <string name="choose_cover">Choose a cover photo</string>
    <string name="avatar">Avatar</string>
    <string name="pet_name">Pet name</string>
    <string name="breed">Breed</string>
    <string name="species">Species</string>
    <string name="birthday">Birthday</string>
    <string name="health">Health</string>
    <string name="describe">Describe</string>
    <string name="healthy">Healthy</string>
    <string name="add">Add</string>
    <string name="opening_image_cropper">Opening image cropper…</string>
    <string name="body_condition">Body Condition</string>
    <string name="clinical_status">Clinical Status</string>
    <string name="activity_amp_mental_state"><![CDATA[Activity & mental state]]></string>
    <string name="preventive_status">Preventive Status</string>
    <string name="has_been_neutered">Has been neutered?</string>
    <string name="weight_kg">Weight (kg)</string>
    <string name="error_empty_pet_name">Please enter pet name!</string>
    <string name="error_empty_pet_species">Please enter species!</string>
    <string name="create_pet_success">Create pet success.</string>
    <string name="view_avatar">View avatar</string>
    <string name="choose_avatar">Choose avatar</string>
    <string name="view_cover">View cover</string>
    <string name="post_saved">Post saved</string>
    <string name="story_saved">Story saved</string>
    <string name="language">Language</string>
    <string name="log_out">Log out</string>
    <string name="settings">Settings</string>
    <string name="error_send_otp">Unable to send OTP. Please try again.</string>
    <string name="otp_incorrect_or_expired">OTP is incorrect or has expired.</string>
    <string name="error_update_password">Cannot change password.</string>
    <string name="otp_expired">OTP has expired, please resend a new code.</string>
    <string name="otp_invalid">OTP invalid.</string>
    <string name="email_not_confirmed">Email not confirmed</string>
    <string name="invalid_credentials">Information is incorrect.</string>
    <string name="error_too_many_requests">You acted too quickly, please try again later.</string>
    <string name="til_forgot_password">Forgot password</string>
    <string name="title_input_email">Enter email to receive password reset OTP.</string>
    <string name="send">Send</string>
    <string name="send_otp">Send OTP</string>
    <string name="verify_your_email">Verify your email</string>
    <string name="hint_enter_otp">Enter OTP</string>
    <string name="action_continue">Continue</string>
    <string name="dep_verify_otp">The verification code has been sent to your email</string>
    <string name="otp_will_expire">OTP code will expire in:</string>
    <string name="second">second</string>
    <string name="not_received_yet">Not received yet?</string>
    <string name="action_resend_otp">Resend verification code</string>
    <string name="resend_otp">Resend OTP code</string>
    <string name="resend_otp_second">Resend OTP (%1$d)</string>
    <string name="til_reset_password">Reset password</string>
    <string name="password_updated">Password changed successfully.</string>
    <string name="please_enter_otp">Please enter otp code.</string>
    <string name="please_enter_full_otp">Please enter full otp code.</string>
    <string name="message_email_verify_success">Your email has been verified. You can now log in.</string>
    <string name="action_back_login">Go back to Login</string>
    <string name="confirmed_successfully">Confirmed successfully!</string>
    <string name="time_just_now">Just now</string>
    <string name="time_minutes_ago">%1$dm ago</string>
    <string name="time_hours_ago">%1$dh ago</string>
    <string name="time_days_ago">%1$dd ago</string>
    <string name="updating_avatar">Updating avatar…</string>
    <string name="updating_cover">Updating cover…</string>
    <string name="update_user_success">Updated user information successfully.</string>
    <string name="no_cover_found">No cover found!</string>
    <string name="no_avatar_found">No avatar found!</string>
    <string name="full_name">Full name</string>
    <string name="bio">Bio</string>
    <string name="action_save">Save</string>
    <string name="please_enter_full_name">Please enter full name!</string>
    <string name="error_get_arg">Error retrieving data!</string>
    <string name="media_not_found">Media not found!</string>
    <string name="error_checking_session">Error checking session: %1$s</string>
    <string name="maximum_media_and_count">Maximum %1$d items</string>
    <string name="permission_media_request">Needs media access to continue.</string>
    <string name="error_fetch_data">There was an error loading data.</string>
    <string name="comments">Comments</string>
    <string name="add_comment">Add comment…</string>
    <string name="author">Author</string>
    <string name="error_add_cmt_failed">Error commenting!</string>
    <string name="share_post">Share post</string>
    <string name="save_post">Save post</string>
    <string name="copy_link">Copy the link to share</string>
    <string name="hide_this_post">Hide this post</string>
    <string name="block_user">Block %1$s</string>
    <string name="dep_save_post">Add to saved posts list</string>
    <string name="dep_remove_post">Delete posts from saved list</string>
    <string name="dep_hide_post">Hide this post from your timeline</string>
    <string name="dep_block_user">You will not see or communicate with each other</string>
    <string name="post_link">Post Link</string>
    <string name="link_copied">Link copied</string>
    <string name="post_unsaved">Post unsaved</string>
    <string name="error_action">An error occurred while performing the action!</string>
    <string name="blocked_user">Blocked this user</string>
    <string name="error">Error, please try again!</string>
    <string name="reply">Reply</string>
    <string name="see_x_answers">—— See %1$d answers</string>
    <string name="replying_to_user">Replying to %1$s</string>
    <string name="hide_answers">—— Hide answer</string>
    <string name="no_comments_yet">There are no comments yet.\nBe the first to comment!</string>
    <string name="error_load_comments_failed">Unable to load comments. Please try again!</string>
    <string name="follow_user">Follow %1$s</string>
    <string name="confirm_logout">Are you sure you want to log out?</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="delete">Delete</string>
    <string name="apply">Apply</string>
    <string name="copy">Copy</string>
    <string name="search_filters">Search filters</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="sort_by">Sort by</string>
    <string name="most_recent">Most Recent</string>
    <string name="select_or_enter_a_species">Select or enter a species…</string>
</resources>