<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/bg_dialog_upload"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/log_out"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textColor="@color/text_color"
        android:fontFamily="@font/baloo2"
        android:paddingBottom="8dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirm_logout"
        android:textSize="18sp"
        android:fontFamily="@font/baloo2"
        android:paddingBottom="12dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/btnLogout"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/yes"
            android:fontFamily="@font/baloo2"
            android:textSize="20sp"
            android:textStyle="bold"
            android:background="?attr/selectableItemBackground"
            android:textColor="@android:color/holo_red_dark"/>

        <TextView
            android:id="@+id/btnCancel"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:gravity="center"
            android:fontFamily="@font/baloo2"
            android:textSize="20sp"
            android:textStyle="bold"
            android:background="?attr/selectableItemBackground"
            android:text="@string/cancel"/>


    </LinearLayout>

</LinearLayout>