<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_activity"
    android:fillViewport="true"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="24dp"
    tools:context=".ui.forgot_pw.fragment.ForgotPasswordOtpFragment">

    <LinearLayout
        android:id="@+id/back_button_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/baloo2"
            android:gravity="center"
            android:paddingBottom="3dp"
            android:text="@string/verify_your_email"
            android:textColor="@color/pet_text_primary"
            android:textSize="22sp"
            android:textStyle="bold"
            tools:ignore="VisualLintBounds" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/baloo2"
        android:gravity="center"
        android:text="@string/dep_verify_otp"
        android:textColor="@color/pet_text_primary"
        android:textSize="16sp"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/email_display_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:fontFamily="@font/baloo2"
        android:text="\@example email"
        android:textColor="@color/bg_btn"
        android:textSize="16sp"
        tools:ignore="HardcodedText,TextContrastCheck" />

    <com.chaos.view.PinView
        android:id="@+id/pin_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:clickable="true"
        android:cursorVisible="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:fontFamily="@font/baloo2"
        android:hint="@string/hint_enter_otp"
        android:inputType="number"
        android:textSize="24sp"
        app:hideLineWhenFilled="false"
        app:itemCount="6"
        app:itemHeight="48dp"
        app:itemSpacing="8dp"
        app:itemWidth="48dp"
        app:lineColor="@color/bg_btn"
        app:lineWidth="2dp"
        app:viewType="rectangle"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/btnContinue"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:backgroundTint="@color/bg_btn"
        android:fontFamily="@font/baloo2"
        android:text="@string/action_continue"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:textStyle="bold"
        app:cornerRadius="30dp"
        tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck,VisualLintButtonSize" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/status_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/baloo2"
            android:gravity="end"
            android:paddingStart="0dp"
            android:paddingEnd="6dp"
            android:text="@string/otp_will_expire"
            android:textColor="@color/pet_text_primary"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/time_otp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/baloo2"
            android:text="60"
            android:textColor="@color/red_500"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:ignore="HardcodedText,TextContrastCheck" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/baloo2"
            android:gravity="center"
            android:paddingStart="6dp"
            android:paddingEnd="0dp"
            android:text="@string/second"
            android:textColor="@color/pet_text_primary"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:ignore="TextContrastCheck,VisualLintBounds" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/baloo2"
            android:gravity="end"
            android:paddingStart="0dp"
            android:paddingEnd="8dp"
            android:text="@string/not_received_yet"
            android:textColor="@color/text_gray"
            android:textSize="16sp"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/btnResendOtp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/baloo2"
            android:text="@string/action_resend_otp"
            android:textColor="@color/bg_btn"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:ignore="TextContrastCheck" />
    </LinearLayout>

</LinearLayout>