<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    android:gravity="center_horizontal"
    tools:context=".ui.activity.VerifyEmailSuccessActivity">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="Success"
        android:src="@drawable/ic_success"
        app:tint="@color/bg_btn"
        tools:ignore="HardcodedText,ImageContrastCheck" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirmed_successfully"
        android:textSize="22sp"
        android:fontFamily="@font/baloo2"
        android:textStyle="bold"
        android:layout_marginTop="16dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/message_email_verify_success"
        android:gravity="center"
        android:textSize="16sp"
        android:fontFamily="@font/baloo2"
        android:layout_marginTop="8dp" />

    <Button
        android:id="@+id/btnBackToLogin"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="32dp"

        android:fontFamily="@font/baloo2"
        android:textStyle="bold"
        android:backgroundTint="@color/pet_text_primary"
        android:text="@string/action_back_login"
        tools:ignore="VisualLintButtonSize" />

</LinearLayout>