<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_activity"
    android:fillViewport="true"
    tools:context=".ui.forgot_pw.fragment.ForgotPasswordEmailFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">

            <ImageButton
                android:id="@+id/btnBack"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:importantForAccessibility="no"
                android:src="@drawable/ic_back"
                app:tint="@color/black"
                tools:ignore="TouchTargetSizeCheck" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/baloo2"
                android:text="@string/til_forgot_password"
                android:textColor="@color/text_color"
                android:textSize="22sp"
                android:textStyle="bold" />
        </androidx.appcompat.widget.Toolbar>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/baloo2"
                android:text="@string/title_input_email"
                android:textColor="@color/text_brown" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:boxBackgroundColor="#EFEBE6"
                app:boxCornerRadiusBottomEnd="30dp"
                app:boxCornerRadiusBottomStart="30dp"
                app:boxCornerRadiusTopEnd="30dp"
                app:boxCornerRadiusTopStart="30dp"
                app:boxStrokeColor="@color/bg_btn"
                app:hintTextColor="@color/bg_btn"
                app:boxStrokeWidthFocused="2dp"
                app:boxStrokeWidth="0dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/text_email"
                    android:fontFamily="@font/baloo2"
                    android:inputType="textEmailAddress"
                    tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnSendOtp"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="40dp"
                android:backgroundTint="@color/bg_btn"
                android:text="@string/send_otp"
                android:textAllCaps="false"
                android:textSize="18sp"
                app:cornerRadius="30dp"
                android:fontFamily="@font/baloo2"
                android:textStyle="bold"
                tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck,VisualLintButtonSize" />
        </LinearLayout>


    </LinearLayout>

</ScrollView>